--- a/app/views/room-control/roomLiving.html
+++ b/app/views/room-control/roomLiving.html
@@ -21,28 +21,64 @@
         </section>
         <div class="panel" ng-show="tab === 1">
             <h4>電器類型</h4>
-            <a class="btn btn-large btn-default" href="#">
-                <i class="fa fa-lightbulb-o fa-5x pull-left"></i>電燈A</a>
-            <a class="btn btn-large btn-default" href="#">
-                <i class="fa fa-lightbulb-o fa-5x pull-left"></i>電燈B</a>
+            <div class="row">
+                <div class="col-md-2">
+                    <a class="btn btn-large btn-default" href="#">
+                        <i class="fa fa-lightbulb-o fa-5x pull-left"></i>電燈A</a>
+                </div>
+                <div class="col-md-2">
+                    <a class="btn btn-large btn-default" href="#">
+                        <i class="fa fa-lightbulb-o fa-5x pull-left"></i>電燈B</a>
+                </div>
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-2">
+                </div>
+            </div>
         </div>
         <div class="panel" ng-show="tab === 2">
             <h4>電視控制</h4>
-            <a class="btn btn-large btn-default" href="#">
-                <i class="fa fa-lightbulb-o fa-5x pull-left"></i>開關</a>
-            <a class="btn btn-large btn-default" href="#">
-                <i class="fa fa-lightbulb-o fa-5x pull-left"></i>增加音量</a>
-            <a class="btn btn-large btn-default" href="#">
-                <i class="fa fa-lightbulb-o fa-5x pull-left"></i>減低音量</a>
+            <div class="row">
+                <div class="col-md-2">
+                    <a class="btn btn-large btn-default" href="#">
+                        <i class="fa fa-lightbulb-o fa-5x pull-left"></i>增加音量</a>
+                </div>
+                <div class="col-md-2">
+                    <a class="btn btn-large btn-default" href="#">
+                        <i class="fa fa-lightbulb-o fa-5x pull-left"></i>減低音量</a>
+                </div>
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-2">
+                </div>
+                <div class="col-md-2">
+                </div>
+            </div>>
         </div>
         <div class="panel" ng-show="tab === 3">
             <h4>冷氣控制</h4>
-            <a class="btn btn-large btn-default" href="#">
-                <i class="fa fa-lightbulb-o fa-5x pull-left"></i>開關</a>
-            <a class="btn btn-large btn-default" href="#">
-                <i class="fa fa-lightbulb-o fa-5x pull-left"></i>增加溫度</a>
-            <a class="btn btn-large btn-default" href="#">
-                <i class="fa fa-lightbulb-o fa-5x pull-left"></i>減低溫度</a>
+            <div class="row">
+                <div class="col-md-2">
+                    <a class="btn btn-large btn-default" href="#">
+                        <i class="fa fa-lightbulb-o fa-5x pull-left"></i>開關</a>
+                </div>
+                <div class="col-md-2">
+                    <a class="btn btn-large btn-default" href="#">
+                        <i class="fa fa-lightbulb-o fa-5x pull-left"></i>增加溫度</a>
+                </div>
+                <div class="col-md-2">
+                    <a class="btn btn-large btn-default" href="#">
+                        <i class="fa fa-lightbulb-o fa-5x pull-left"></i>減低溫度</a>
+                </div>
+                <div class="col-md-2">
+                </div>
+            </div>>
         </div>
     </div>
 </div>
