--- a/app/views/room-control/roomLiving.html
+++ b/app/views/room-control/roomLiving.html
@@ -23,11 +23,11 @@
             <h4>電器類型</h4>
             <div class="row">
                 <div class="col-md-2">
-                    <a class="btn btn-large btn-default" href="#">
+                    <a class="btn btn-large btn-success" href="">
                         <i class="fa fa-lightbulb-o fa-5x pull-left"></i>電燈A</a>
                 </div>
                 <div class="col-md-2">
-                    <a class="btn btn-large btn-default" href="#">
+                    <a class="btn btn-large btn-danger" href="">
                         <i class="fa fa-lightbulb-o fa-5x pull-left"></i>電燈B</a>
                 </div>
                 <div class="col-md-2">
@@ -44,11 +44,11 @@
             <h4>電視控制</h4>
             <div class="row">
                 <div class="col-md-2">
-                    <a class="btn btn-large btn-default" href="#">
+                    <a class="btn btn-large btn-default" href="">
                         <i class="fa fa-lightbulb-o fa-5x pull-left"></i>增加音量</a>
                 </div>
                 <div class="col-md-2">
-                    <a class="btn btn-large btn-default" href="#">
+                    <a class="btn btn-large btn-default" href="">
                         <i class="fa fa-lightbulb-o fa-5x pull-left"></i>減低音量</a>
                 </div>
                 <div class="col-md-2">
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-md-2">
                 </div>
-            </div>>
+            </div>
         </div>
         <div class="panel" ng-show="tab === 3">
             <h4>冷氣控制</h4>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-2">
                 </div>
-            </div>>
+            </div>
         </div>
     </div>
 </div>
